[package]
name = "gemini"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "5.3", optional = true }
schemars = { version = "0.8", optional = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
deser-incomplete = "0.1.2"
futures = "0.3"
bytes = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

[features]
default = []
openapi = ["utoipa"]
json = ["schemars"]
