[package]
name = "gemini"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.101"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
utoipa = { version = "5.3", optional = true }
schemars = { version = "1.2.1", optional = true }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
async-trait = "0.1"
deser-incomplete = "0.1.2"
futures = "0.3"
async-stream = "0.3.6"
bytes = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }

[features]
default = []
openapi = ["utoipa"]
json = ["schemars"]
